--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_DB_URL = 'mongodb+srv://shauryabarkund:jR91GZHOEZWVfA8e@cluster0.ssvbvgo.mongodb.net/paytm'
-PORT=3005
+PORT = 3005
+JWT_SECRET =  "shaurya-secret"
